--- a/example/index.html
+++ b/example/index.html
@@ -21,12 +21,7 @@
     </style>
   </head>
   <body>
-    <div id="root" style="height: 100vh; background: #eee;"></div>
-    <div id="portal-root"></div>
-    <script src="./index.tsx"></script>
-
-    <script>
-      document.body.addEventListener("scroll", event => event.preventDefault());
-    </script>
+    <div id="root"></div>
+    <script src="./index.js"></script>
   </body>
 </html>
